objects/TaxConditionDetail__c.object
<CustomObject>
    <description>Account Tax Condition Detail</description>
    <fields>
        <fullName>Alarm_Level__c</fullName>
        <description>Alarm Level</description>
        <inlineHelpText>Alarm Level</inlineHelpText>
        <label>Alarm Level</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category</description>
        <inlineHelpText>Category</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>IIBB_ENA</fullName>
                    <label>IIBB Exento / No Alcanzado</label>
                </value>
                <value>
                    <fullName>IIBB_ICM</fullName>
                    <label>Inscripto en Convenio Multilateral</label>
                </value>
                <value>
                    <fullName>IIBB_IL</fullName>
                    <label>IIBB Inscripto Local</label>
                </value>
                <value>
                    <fullName>IIBB_NIS</fullName>
                    <label>IBB No informó situación</label>
                </value>
                <value>
                    <fullName>IVA_CF</fullName>
                    <label>IVA Consumidor Final</label>
                </value>
                <value>
                    <fullName>IVA_ENA</fullName>
                    <label>IVA Exento / No Alcanzado</label>
                </value>
                <value>
                    <fullName>IVA_LEY20646</fullName>
                    <label>IVA Exento Ley 20.646 6/2/74</label>
                </value>
                <value>
                    <fullName>IVA_LEY23905</fullName>
                    <label>IVA Exento Art. 22 Ley 23.905</label>
                </value>
                <value>
                    <fullName>IVA_M</fullName>
                    <label>IVA Monotributista</label>
                </value>
                <value>
                    <fullName>IVA_RG3290</fullName>
                    <label>IVA Exento RG 3290 3349/91</label>
                </value>
                <value>
                    <fullName>IVA_RI</fullName>
                    <label>IVA Responsable Inscripto</label>
                </value>
                <value>
                    <fullName>IVA_SNC</fullName>
                    <label>IVA Sujeto No Categorizado</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateFrom__c</fullName>
        <description>Date From</description>
        <inlineHelpText>Date From</inlineHelpText>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTo__c</fullName>
        <description>Date To</description>
        <inlineHelpText>Date To</inlineHelpText>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <description>Jurisdiction</description>
        <inlineHelpText>Jurisdiction</inlineHelpText>
        <label>Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bs. As</fullName>
                </value>
                <value>
                    <fullName>CABA</fullName>
                </value>
                <value>
                    <fullName>Catamarca</fullName>
                </value>
                <value>
                    <fullName>Chaco</fullName>
                </value>
                <value>
                    <fullName>Chubut</fullName>
                </value>
                <value>
                    <fullName>Córdoba</fullName>
                </value>
                <value>
                    <fullName>Corrientes</fullName>
                </value>
                <value>
                    <fullName>Entre Ríos</fullName>
                </value>
                <value>
                    <fullName>Formosa</fullName>
                </value>
                <value>
                    <fullName>Jujuy</fullName>
                </value>
                <value>
                    <fullName>La Pampa</fullName>
                </value>
                <value>
                    <fullName>La Rioja</fullName>
                </value>
                <value>
                    <fullName>Mendoza</fullName>
                </value>
                <value>
                    <fullName>Misiones</fullName>
                </value>
                <value>
                    <fullName>Neuquén</fullName>
                </value>
                <value>
                    <fullName>Rio Negro</fullName>
                </value>
                <value>
                    <fullName>Salta</fullName>
                </value>
                <value>
                    <fullName>San Juan</fullName>
                </value>
                <value>
                    <fullName>San Luis</fullName>
                </value>
                <value>
                    <fullName>Santa Cruz</fullName>
                </value>
                <value>
                    <fullName>Santa Fe</fullName>
                </value>
                <value>
                    <fullName>Sgo. Del Estero</fullName>
                </value>
                <value>
                    <fullName>Tierra del Fuego</fullName>
                </value>
                <value>
                    <fullName>Tucumán</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <description>Percentage</description>
        <inlineHelpText>Percentage</inlineHelpText>
        <label>Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxCondition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Tax Condition</description>
        <inlineHelpText>Account Tax Condition</inlineHelpText>
        <label>TaxCondition</label>
        <referenceTo>TaxCondition__c</referenceTo>
        <relationshipLabel>TaxConditionDetails</relationshipLabel>
        <relationshipName>TaxConditionDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Condition_Status__c</fullName>
        <formula>TEXT(TaxCondition__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Condition Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type</description>
        <inlineHelpText>Type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ex IIBB</fullName>
                </value>
                <value>
                    <fullName>Ex IVA</fullName>
                </value>
                <value>
                    <fullName>IIBB</fullName>
                </value>
                <value>
                    <fullName>IVA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TaxConditionDetail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TD-{000000}</displayFormat>
        <label>TaxConditionDetail</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TaxConditionDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>